fixed white space

--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -138,6 +138,7 @@
 	margin: 0px;
 	position: relative;
 	top: 150px;
+	left: -15px;
 	background-image: url('../images/mobskills.png');
 	
 	}
@@ -169,7 +170,7 @@
 	}
 
     #thirdboxtitle{
-	margin: -50px auto 0 auto;
+	margin: -50px auto 0 -10px;
 	width: 400px;
 	height: 300px;
 	background-image: url('../images/port1.png');
@@ -177,6 +178,7 @@
 	background-repeat: no-repeat;
 	}
 	#thirdboxtitleb{
+		margin-left: -10px;
 		display: block;
 		width: 400px;
 		height: 300px;
